spacing fixed

--- a/frozenflamedesign/styles/styles.css
+++ b/frozenflamedesign/styles/styles.css
@@ -188,9 +188,6 @@ footer a:hover {
 /*----- HOME end -----*/
 
 /*----- Packages -----*/
-#packages-main {
-  margin-top: -25px;
-}
 #pack-main {
   display: grid;
   grid-template-columns: 1fr 50px 2fr;
@@ -201,7 +198,6 @@ footer a:hover {
 #pack-msg{
   grid-area: 1/1/2/2;
   padding-left: 20px;
-  margin-top: -25px;
 }
 #pack-cards{
   grid-area: 1/3/2/4;
